Added article WhenIOCContainersBecomesAnAntiPattern

--- a/AllArticles.html
+++ b/AllArticles.html
@@ -35,7 +35,7 @@
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p><em>A site (mostly) by Kasper B. Graversen</em>
 <br><a href="http://firstclassthoughts.co.uk/">[Introduction]</a> <a href="http://firstclassthoughts.co.uk/AllTags.html">[All categories]</a> <a href="http://firstclassthoughts.co.uk/AllArticles.html">[All articles]</a></p>
-<h2 id="all-11-articles-on-the-site">All 11 articles on the site</h2>
+<h2 id="all-12-articles-on-the-site">All 12 articles on the site</h2>
 <p><strong>Articles/BookReviews</strong></p>
 <ul>
 <li><a href="Articles/BookReviews/AdaptiveCodeviaCS.html">Book review: Adaptive Code via C#</a></li>
@@ -47,6 +47,7 @@
 <li><a href="Articles/Design/MalleableCodeUsingDecorators.html">Malleable code by using decorators</a></li>
 <li><a href="Articles/Design/StepwiseRefinementOfCode.html">Stepwise refinement of code</a></li>
 <li><a href="Articles/Design/LINQExtensionMethodsBestPractices.html">The 6 best practices for writing LINQ extension methods</a></li>
+<li><a href="Articles/Design/WhenIOCContainersBecomesAnAntiPattern.html">When IOC containers become an anti-pattern</a></li>
 </ul>
 <p><strong>Articles/Readability</strong></p>
 <ul>
