--- a/AllTags.html
+++ b/AllTags.html
@@ -36,6 +36,10 @@
 <p><em>A site (mostly) by Kasper B. Graversen</em>
 <br><a href="http://firstclassthoughts.co.uk/">[Introduction]</a> <a href="http://firstclassthoughts.co.uk/AllTags.html">[All categories]</a> <a href="http://firstclassthoughts.co.uk/AllArticles.html">[All articles]</a></p>
 <h2 id="all-categories-on-the-site">All categories on the site</h2>
+<p>A</p>
+<ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Architecture.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #21689d;    display: inline-block;">Architecture</a></li>
+</ul>
 <p>B</p>
 <ul>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Book_Review.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #3c8700;    display: inline-block;">Book Review</a></li>
@@ -50,6 +54,7 @@
 <p>D</p>
 <ul>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Decorator.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #1549c6;    display: inline-block;">Decorator</a></li>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Dependency_Injection.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #2d7da0;    display: inline-block;">Dependency Injection</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Design.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #eee6bb;    display: inline-block;">Design</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Design_Pattern.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #9e89d7;    display: inline-block;">Design Pattern</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Domain_Types.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #400cdb;    display: inline-block;">Domain Types</a></li>
@@ -70,6 +75,8 @@
 </ul>
 <p>I</p>
 <ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/IOC.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #a14685;    display: inline-block;">IOC</a></li>
+<li><a href="http://firstclassthoughts.co.uk/Tags/IOC_Container.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #c1b671;    display: inline-block;">IOC Container</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Iteration.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #df93a4;    display: inline-block;">Iteration</a></li>
 </ul>
 <p>L</p>
@@ -77,12 +84,18 @@
 <li><a href="http://firstclassthoughts.co.uk/Tags/LINQ.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #2e09d3;    display: inline-block;">LINQ</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Looping.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #497012;    display: inline-block;">Looping</a></li>
 </ul>
+<p>M</p>
+<ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Micro_Service.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #61bfd3;    display: inline-block;">Micro Service</a></li>
+</ul>
 <p>R</p>
 <ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Refactor_to_Micro_Services.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #438d05;    display: inline-block;">Refactor to Micro Services</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Refactoring.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #c6dc6b;    display: inline-block;">Refactoring</a></li>
 </ul>
 <p>S</p>
 <ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Service_Locator.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #54b55b;    display: inline-block;">Service Locator</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Single_Responsibility_Principle.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #27d630;    display: inline-block;">Single Responsibility Principle</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/SOLID.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #815bee;    display: inline-block;">SOLID</a></li>
 </ul>
