--- a/AllTags.html
+++ b/AllTags.html
@@ -88,6 +88,10 @@
 <ul>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Micro_Service.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #61bfd3;    display: inline-block;">Micro Service</a></li>
 </ul>
+<p>P</p>
+<ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Programmer_Humor.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #a5c1f9;    display: inline-block;">Programmer Humor</a></li>
+</ul>
 <p>R</p>
 <ul>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Refactor_to_Micro_Services.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #438d05;    display: inline-block;">Refactor to Micro Services</a></li>
