--- a/AllArticles.html
+++ b/AllArticles.html
@@ -35,7 +35,7 @@
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p><em>A site (mostly) by Kasper B. Graversen</em>
 <br><a href="http://firstclassthoughts.co.uk/">[Introduction]</a> <a href="http://firstclassthoughts.co.uk/AllTags.html">[All categories]</a> <a href="http://firstclassthoughts.co.uk/AllArticles.html">[All articles]</a></p>
-<h2 id="all-13-articles-on-the-site">All 13 articles on the site</h2>
+<h2 id="all-14-articles-on-the-site">All 14 articles on the site</h2>
 <p><strong>Articles/BookReviews</strong></p>
 <ul>
 <li><a href="Articles/BookReviews/AdaptiveCodeviaCS.html">Book review: Adaptive Code via C#</a></li>
@@ -52,6 +52,10 @@
 <p><strong>Articles/ProgrammerHumor</strong></p>
 <ul>
 <li><a href="Articles/ProgrammerHumor/FixingABugInProduction.html">Fixing a bug in production</a></li>
+</ul>
+<p><strong>Articles/Programming</strong></p>
+<ul>
+<li><a href="Articles/Programming/DebuggingWithWindbg.html">Debugging software using windbg</a></li>
 </ul>
 <p><strong>Articles/Readability</strong></p>
 <ul>
