--- a/AllTags.html
+++ b/AllTags.html
@@ -53,6 +53,7 @@
 </ul>
 <p>D</p>
 <ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Debugging.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #e94dd3;    display: inline-block;">Debugging</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Decorator.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #1549c6;    display: inline-block;">Decorator</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Dependency_Injection.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #2d7da0;    display: inline-block;">Dependency Injection</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Design.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #eee6bb;    display: inline-block;">Design</a></li>
