--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <p><em>A site providing information on achieving super readable and maintainable code.</em></p>
 <p>Newest 4 articles out of 14 articles.</p>
 <ul>
-<li><a href="Articles/Programming/DebuggingWithWindbg.html">Debugging using windbg.exe</a> <img src="img/new.gif"></li>
-<li><a href="Articles/Design/WhenIOCContainersBecomesAnAntiPattern.html">When IOC containers become an anti-pattern</a> <img src="img/new.gif"></li>
-<li><a href="Articles/Design/LINQExtensionMethodsBestPractices.html">The 6 best practices for writing LINQ extension methods</a> </li>
-<li><a href="Articles/Readability/FromImperativeTtoDeclarativeCodeUsingLINQ.html">From imperative to declarative code using LINQ extension methods</a> </li>
+<li><a href="Articles/Programming/DebuggingWithWindbg.html">Debugging software using windbg</a> <img src="img/new.gif"></li>
+<li><a href="Articles/Design/DomainTypeAndEmergentBehaviour.html">Domain types creates readability ...and emergent behaviour</a> </li>
+<li><a href="Articles/ProgrammerHumor/FixingABugInProduction.html">Fixing a bug in production</a> </li>
+<li><a href="Articles/Design/WhenIOCContainersBecomesAnAntiPattern.html">When IOC containers become an anti-pattern</a> </li>
 </ul>
 <h2 id="introduction">Introduction</h2>
 <blockquote>
