--- a/AllTags.html
+++ b/AllTags.html
@@ -67,8 +67,10 @@
 </ul>
 <p>F</p>
 <ul>
+<li><a href="http://firstclassthoughts.co.uk/Tags/F#.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #4beab1;    display: inline-block;">F#</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/for.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #8fd55c;    display: inline-block;">for</a></li>
 <li><a href="http://firstclassthoughts.co.uk/Tags/foreach.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #731fa0;    display: inline-block;">foreach</a></li>
+<li><a href="http://firstclassthoughts.co.uk/Tags/FSharp.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #2efeac;    display: inline-block;">FSharp</a></li>
 </ul>
 <p>G</p>
 <ul>
