added lock is really fast

--- a/AllArticles.html
+++ b/AllArticles.html
@@ -35,7 +35,7 @@
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p><em>A site (mostly) by Kasper B. Graversen</em>
 <br><a href="http://firstclassthoughts.co.uk/">[Introduction]</a> <a href="http://firstclassthoughts.co.uk/AllTags.html">[All categories]</a> <a href="http://firstclassthoughts.co.uk/AllArticles.html">[All articles]</a></p>
-<h2 id="all-15-articles-on-the-site">All 15 articles on the site</h2>
+<h2 id="all-16-articles-on-the-site">All 16 articles on the site</h2>
 <p><strong>Articles/BookReviews</strong></p>
 <ul>
 <li><a href="Articles/BookReviews/AdaptiveCodeviaCS.html">Book review: Adaptive Code via C#</a></li>
@@ -55,6 +55,7 @@
 </ul>
 <p><strong>Articles/Programming</strong></p>
 <ul>
+<li><a href="Articles/Programming/DotNetLocksAreReallyFast.html">.Net <code>lock</code> is really fast!</a></li>
 <li><a href="Articles/Programming/DebuggingWithWindbg.html">Debugging software using windbg</a></li>
 <li><a href="Articles/Programming/ExplicitAndImplicitInterfaceImplementationInFSharp.html">Explicit and implicit interface implementations in F</a></li>
 </ul>
